src/main/resources/tests/Semantics/bad/forLoop1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin
   -- Test for loop with errors
   for variable1 in 1 .. 0 loop -- Error: range should not be empty
      put('E');
   end loop;
end TestLoops;
